<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/purchased"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/item_purchased"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/purchaseItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_purchase_item"
        android:layout_marginTop="30dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/purchased"
        app:layout_constraintStart_toStartOf="@id/purchased"
        app:layout_constraintEnd_toEndOf="@id/purchased"/>

    <TextView
        android:id="@+id/nameItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/purchaseItem"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/purchaseItem"
        app:layout_constraintEnd_toEndOf="@id/purchaseItem"/>

    <Button
        android:id="@+id/Ok"
        android:text="@string/ok"
        android:layout_width="247dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/purchaseItem"
        android:background="@drawable/btnbackground"
        app:layout_constraintStart_toStartOf="@id/purchaseItem"
        app:layout_constraintEnd_toEndOf="@id/purchaseItem"/>


</androidx.constraintlayout.widget.ConstraintLayout>