<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:paddingStart="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:text="@string/back"
            android:id="@+id/btnBack"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="28dp"
            android:clickable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableStartCompat="@drawable/vektor" />
        
        <ImageView
            android:id="@+id/itemInActivity"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnBack"
            app:layout_constraintBottom_toBottomOf="@id/btnBack"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/middleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topLayout">

        <TextView
            android:id="@+id/product_name"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="31dp"
            android:text="@string/item_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="29dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/product_name"
            app:layout_constraintTop_toBottomOf="@id/product_name" />

        <TextView
            android:id="@+id/product_price"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="15dp"
            android:text="@string/price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="29dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_price" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/description_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/middleLayout">

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="13dp"/>
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/description_text"
            app:layout_constraintStart_toStartOf="@id/description_text"
            android:textColor="@android:color/black"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/botton_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">


        <Button
            android:id="@+id/btnBuy"
            android:background="@drawable/btnbackground"
            android:text="@string/Buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="47dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="18dp"/>
        <TextView
            android:id="@+id/is_in_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:layout_marginStart="18dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/btnBuy"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/inStock"/>
        <TextView
            android:id="@+id/status_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            app:layout_constraintBottom_toTopOf="@+id/is_in_stock"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="18dp"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


